@@ -175,6 +175,13 @@ void TextComposition::HandleMessage(const SDL_Event* e)
                     CursorRight();
                     console.RefreshCaret();
                     break;
+                case SDLK_c:
+                    if ((modifier & KEYBOARD_PRIMARY_MODIFIER) && _session.Length)
+                    {
+                        SDL_SetClipboardText(_session.Buffer);
+                        context_show_error(STR_COPY_INPUT_TO_CLIPBOARD, STR_NONE);
+                    }
+                    break;
                 case SDLK_v:
                     if ((modifier & KEYBOARD_PRIMARY_MODIFIER) && SDL_HasClipboardText())
                     {
